applied comments after code review

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <li class="contact-item">
                     <a href="tel:+380961111111" class="contacts">
                         <svg class="icon-smartphone">
-                            <use href="./images/icons.svg#icon-smartphone" </use>
+                            <use href="./images/icons.svg#icon-smartphone"> </use>
                         </svg>
                         +38 096 111 11 11</a>
                 </li>
@@ -125,7 +125,7 @@
         </section>
 
         <!-- сотрудники -->
-        <section class="team">
+        <section class="team section">
             <div class="container">
                 <h2 class="title team-title">Наша команда</h2>
                 <ul class="list team-list">
@@ -295,7 +295,7 @@
 
         <!-- клиенты -->
 
-        <section class="clients">
+        <section class="clients section">
             <div class="container">
                 <h2 class="title">
                     Постоянные клиенты
@@ -365,7 +365,7 @@
                 <h3 class="company-sn-title">Присоединяйтесь</h3>
                 <ul class="company-sn-list list">
                     <li class="company-sn-item">
-                        <a href="#" class="sompany-sn-link">
+                        <a href="#" class="company-sn-link">
                             <svg class="company-sn-icon">
                                 <use href="./images/icons.svg#icon-instagram"></use>
                             </svg>
@@ -373,7 +373,7 @@
 
                     </li>
                     <li class=" company-sn-item">
-                        <a href="#" class="sompany-sn-link">
+                        <a href="#" class="company-sn-link">
                             <svg class="company-sn-icon">
                                 <use href="./images/icons.svg#icon-twitter"></use>
                             </svg>
@@ -381,7 +381,7 @@
 
                     </li>
                     <li class=" company-sn-item">
-                        <a href="#" class="sompany-sn-link">
+                        <a href="#" class="company-sn-link">
                             <svg class="company-sn-icon">
                                 <use href="./images/icons.svg#icon-facebook"></use>
                             </svg>
@@ -389,12 +389,11 @@
 
                     </li>
                     <li class="company-sn-item">
-                        <a href="#" class="sompany-sn-link">
+                        <a href="#" class="company-sn-link">
                             <svg class="company-sn-icon">
                                 <use href="./images/icons.svg#icon-linkedin"> </use>
+                            </svg>
                         </a>
-
-                        </svg>
                     </li>
                 </ul>
             </div>
