--- a/index.html
+++ b/index.html
@@ -51,8 +51,10 @@
 
         <!-- оформление заказа на услугу -->
         <section class="hero-section">
-            <h1 class="page-title">Эффективные решения для вашего бизнеса</h1>
-            <button type="button" class="button">Заказать услугу</button>
+            <div class="container">
+                <h1 class="page-title">Эффективные решения для вашего бизнеса</h1>
+                <button type="button" class="button">Заказать услугу</button>
+            </div>
         </section>
 
         <!-- ценности компании -->
